[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Projectiles/Phase2_Atk2.gd" type="Script" id=1]
[ext_resource path="res://Resources/Materials/hazard_mat.tres" type="Material" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.310823, 0.658155, 0.0231924 )

[sub_resource type="PrismMesh" id=2]
size = Vector3( 2, 2, 0.05 )

[node name="Phase2_Atk2" type="Spatial" groups=["hazard"]]
transform = Transform( 1.5, 0, 0, 0, 1, 0, 0, 0, 1.5, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Hitbox" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Hitbox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.00748348, -0.288163 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -1, -1.50996e-07, 6.60024e-15, 0, -4.37114e-08, -1, 1.50996e-07, -1, 4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[node name="LifeTime" type="Timer" parent="."]

[connection signal="camera_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_exited"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
